# quant-ml-lab

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  Ridge_&_Lasso_From_Scratch.ipynb  pyproject.toml
.github/workflows/: ci.yml
config/: pipeline.yaml  tickers.yaml
data/: technology_companies.csv
data/metadata/: earnings_dataset_stats.json
data_ops/: README.MD  pyproject.toml
data_ops/src/core/: config.py
data_ops/src/data/: ffd.py  loader.py  tensor_loader.py  validators.py
data_ops/src/data_factory/: loader.py
data_ops/src/risk_engine/: constraints.py  covariance.py
data_ops/tests/: conftest.py  test_features.py  test_ffd.py  test_tensors.py  test_validators.py
ffd/: README.md
ffd & adf/src/data/: transform.py
ffd/src/pipelines/: ingestion.py
ffd_adf/: README.md
ffd_adf/src/data/: loader.py  transform.py
ffd_adf/src/pipelines/: ingestion.py
research/: archived_tensor_loader.py
research/ffd_adf/: README.md
research/ffd_adf/data/: loader.py  transform.py
research/ffd_adf/pipelines/: ingestion.py
research/ridge-lasso/: README.md  Ridge_&_Lasso_From_Scratch.ipynb
ridge-lasso/: Ridge_&_Lasso_From_Scratch.ipynb
src/: README.MD
src/core/: config.py  schemas.py
src/data/: features.py  tensor_loader.py  validators.py
src/lab/: definitions.py
src/lab/core/: config.py  schemas.py
src/lab/data/: features.py  ffd.py  loader.py  tensor_loader.py  validators.py
src/lab/defs/: __init__.py  assets.py  resources.py
src/lab/risk_engine/: constraints.py  covariance.py  hrp.py
src/risk_engine/: cla.py  hrp.py
tests/: bench_tensor_loader.py  conftest.py  test_dagster_assets.py  test_features.py  test_ffd.py  test_frac_diff.py  test_tensors.py  test_validators.py
