[project]
name = "quant-ml-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.31.0",
    "orjson>=3.11.8",
    "pandas>=2.3.3",
    "polars>=1.39.0",
    "polars-talib>=0.1.5",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.1",
    "pyportfolioopt>=1.6.0",

    "pytorch-forecasting>=1.7.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "xgboost<3",
    "yfinance>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
run-pipeline = "src.pipelines.data_pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = ["archive/", "src/risk_engine/cla\\.py"]

[tool.uv.workspace]
members = ["data_ops"]
