[project]
name = "quant-ml-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.13.14",
    "dagster-polars>=0.27.12",
    "dagster-webserver>=1.13.14",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.31.0",
    "orjson>=3.11.8",
    "pandas>=2.3.3",
    "polars>=1.39.0",
    "polars-talib>=0.1.5",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.1",
    "pyportfolioopt>=1.6.0",
    "pytorch-forecasting>=1.7.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "types-pyyaml>=6.0.12.20260518",
    "xgboost<3",
    "yfinance>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "dagster-docker>=0.29.14",
    "dagster-dg-cli>=1.13.14",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "lab"
registry_modules = [
    "lab.defs",
]

[tool.dagster]
module_name = "lab.defs"

[project.scripts]
run-pipeline = "lab.pipelines.data_pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 130
target-version = "py310"
exclude = [
    "research/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
mypy_path = "src"
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["archive/", "src/risk_engine/cla\\.py", "research/"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest-cov>=7.1.0",
    "types-pyyaml>=6.0.12.20260518",
]
